--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                 </div>
                  <!-- About Section Content-->
                  <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead"> My name is Karimah Zaudatul Afkariah I'm 24 years old. I'm Experienced Junior Auditor with a demonstrated history of working in the accounting industry. </p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">  I'm Experienced Junior Auditor with a demonstrated history of working in the accounting industry. </p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead"> Highly motivated and enthusiast student in accounting-auditing-tax, who believes in the existence of perseverance in achievements. Skilled in Microsoft Excel, Microsoft Word, TOEFL, Accounting, and Microsoft Office. Strong accounting professional with a Bachelor's degree focused in Accounting and Business/Management from Mercu Buana University.</p></div>
                 </div>
             </div>
